--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Drawing App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div class="controls">
+        <label for="colorPicker">Color:</label>
+        <input type="color" id="colorPicker" value="#000000">
+
+        <label for="sizeSlider">Size:</label>
+        <input type="range" id="sizeSlider" min="1" max="50" value="5">
+
+        <button id="clearButton">Clear</button>
+    </div>
+
+    <canvas id="drawingCanvas"></canvas>
+
+    <script src="script.js"></script>
+</body>
+</html>
